# delPezzo

./: .gitignore  README.md  bibliography.rst  pyproject.toml
.devcontainer/: devcontainer.json
2020/: cylinder_cones.py  del Pezzo 2020-06-12.ipynb  del Pezzo 2020-06-16.ipynb
2023/: dP_cones.sage  dP_cones_7.sage  delPezzo_cylinders.py  test-Cylinder-1.py  test-CylinderCollection-1.py  test-Surface-2.py  test_deg2.sage  test_deg4.py  test_deg5.py
data/: Lubbes_list.txt  readme.txt
debugging settings/: home-vscode-extensions.json
old/2020/: del Pezzo 2020-06-23.ipynb  del Pezzo 2020-06-26.ipynb  flexibility of Fermat cubic.ipynb  flexibility of cubic cones 2020-06-30.ipynb  flexibility of cubic cones 2020-07-16.ipynb
old/2023/: dP_cones_14.sage  delPezzo_cylinders.sage  doctest_failure.sage  sage_import.py
old/2023/codiumAI/: description.txt  test-Surface-1.py
old/del Pezzo 2022/: del Pezzo deg 2.ipynb
src/: Lubbes_parse.py  delPezzo_cylinders.py  test_blowups.py  test_deg1.py  test_deg2.py  test_deg2_B2.py  test_deg2_KimPark.py  test_deg3.py  test_deg4.py  test_deg5.py  test_various.py  test_weak_deg6.py
src/delPezzo/: Lubbes_parse.py  __init__.py  cone.py  cylinder.py  finder.py  surface.py
tests/: examples.ipynb  temp.ipynb  test_Lubbes.py  test_blowups.py  test_contraction.py  test_deg1.py  test_deg2.py  test_deg2_B2.py  test_deg2_KimPark.py  test_deg3.py  test_deg4.py  test_deg5.py  test_finder.py  test_surface.py  test_various.py  test_weak_deg6.py  tests.ipynb
