[project]
name = "delPezzo"
description = "a Sagemath module for studying flexibility of affine cones over del Pezzo surfaces"
version = "2025.1"

authors = [{name = "Alexander Perepechko", email = "a@perep.ru"}]

requires-python = ">=3.9"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pytest.ini_options]
addopts = "--import-mode importlib -p no:warnings"
